# SkinFixer-API

./: Cargo.toml  Dockerfile  README.md
api/: Cargo.toml
api/src/: error.rs  lib.rs  mineskin.rs  mojang.rs
api/src/endpoints/generate/: uuid.rs
dal/: Cargo.toml
dal/migrations/: V1__initial.sql
dal/src/: lib.rs  playername_cache.rs  premium_skin_cache.rs
migrations/: V1__initial.sql
old/src/: main.rs
routes/: Cargo.toml
routes/src/: appdata.rs  empty.rs  error.rs  lib.rs  routable.rs
routes/src/routes/: mod.rs
routes/src/routes/generate/: mod.rs  url.rs
routes/src/routes/player/: get.rs  mod.rs
skinfixer-api/: Cargo.toml
src/: appdata.rs  cache.rs  empty.rs  error.rs  key_rotation.rs  main.rs
src/api/: mineskin.rs  mod.rs  mojang.rs
src/database/: mod.rs  player.rs  uuid.rs
src/endpoints/: mod.rs  player.rs  up.rs  url.rs  uuid.rs
src/endpoints/generate/: mod.rs  url.rs  uuid.rs
src/routes/: health.rs  mod.rs  player.rs
src/routes/generate/: mod.rs  url.rs  uuid.rs
