[package]
name = "skinfixer_api"
version = "0.1.0"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
reqwest = { version = "0.11.3",  default-features = false, features = ["blocking", "json", "rustls-tls"]}
rand = "0.8.3"
base64 = "0.13.0"