[package]
name = "skinfixer_api"
version = "0.2.0"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
actix-route-config = "0.1.1"
serde_json = "1.0.64"
rand = "0.8.3"
base64 = "0.21.4"
time = "0.3.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-actix-web = "0.7.6"
noiseless-tracing-actix-web = "0.1.0"
thiserror = "1.0.30"
envy = "0.4.2"
futures-util = "0.3.18"
serde = { version = "1.0.188", features = ["derive"] }
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls"]}
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio-rustls", "migrate"] }
color-eyre = "0.6.2"