[package]
name = "skinfixer_api"
version = "0.1.0"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2021"

[dependencies]
actix-web = "4.1.0"
actix-cors = "0.6.1"
serde_json = "1.0.81"
rand = "0.8.5"
base64 = "0.13.0"
time = "0.3.11"
log = "0.4.17"
env_logger = "0.9.0"
thiserror = "1.0.31"
envy = "0.4.2"
futures-util = "0.3.21"

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.11"
default-features = false
features = ["blocking", "json", "rustls-tls"]

[dependencies.paperclip]
version = "0.7.0"
features = ["actix4", "actix-multipart", "path-in-definition"]

[dependencies.refinery]
version = "0.8.4"
default-features = false
features = ["mysql"]

[dependencies.mysql]
version = "=22.0.0"
default-features = false
features = ["rustls-tls"]